<resources>
    <string name="app_name">小麟HD</string>
    <string name="network_invalid">网络不给力，请检查网络连接！</string>
    <!-- login.xml / LoginActivity.java -->
    <string name="companyName">登录界面的文字</string> <!-- 设置文字 -->
    <string name="compangyNum">编号</string> <!-- 公司编号 -->
    <string name="employeeNum">工号</string> <!-- 工号-->
    <string name="psd">密码</string> <!-- 密码-->
    <string name="byFace">人脸登录</string> <!-- 人脸登录-->
    <string name="btn_Login">登录</string> <!-- 登录-->
    <string name="LoginActivity_companyNum">公司编号</string> <!-- 请输入公司编号！-->
    <string name="LoginActivity_employeeNum">员工编号</string> <!-- 请输入工号！-->
    <string name="LoginActivity_psd">登录密码</string>
    <string name="main_title">企业智能管理系统</string>
    <string name="LoginActivity_error">登录信息有误，请再确认账号和密码!</string>
    <!-- tab 信息-->
    <string name="msg_list">消息列表</string>
    <string name="msg_search">信息查询</string>
    <string name="vip_reg">人员注册</string>

    <!-- msg详情-->
    <string name="msg_regist_img">注册图:</string>
    <string name="msg_cap_img">抓拍图:</string>
    <string name="msg_name">姓名</string>
    <string name="msg_gender">性别</string>
    <string name="msg_id">编号</string>
    <string name="msg_company">公司</string>
    <string name="msg_captime">采集时间</string>
    <string name="msg_score">分数</string>
    <string name="msg_dept">部门</string>
    <string name="msg_address">地址</string>
    <string name="msg_attendType">考勤类型</string>
    <string name="msg_dataface">人像库</string>

    <!-- 注册-->
    <string name="Registervip_et_company">请输入公司名称</string>
    <string name="vip_company">公司名称</string>
    <string name="RegisterActivity_et_name">请输入客户姓名</string>
    <string name="RegisterActivity_employee_id">请输入员工编号</string>
    <string name="RegisterActivity_et_id">请输入客户号</string>
    <string name="radioBtn_male">男</string>
    <string name="radioBtn_female">女</string>
</resources>
