<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:gravity="center"
    android:theme="@android:style/Theme.NoTitleBar"
    tools:context="com.yvision.LoginActivity"
    >

    <!-- 01-1:图标 -->

    <RelativeLayout
        android:layout_width="370dp"
        android:layout_height="456dp"
        android:gravity="center_horizontal">

        <!-- logo图标 -->

        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@mipmap/logo"/>


        <EditText
            android:id="@+id/et_storeId"
            android:layout_width="302dp"
            android:layout_height="47dp"
            android:layout_below="@+id/img"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="34dp"
            android:layout_marginTop="36dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@mipmap/login_store_bg"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:hint="@string/LoginActivity_companyNum"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/common_textSize_default14"/>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_below="@+id/et_storeId"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="34dp"
            android:background="@android:color/white"/>

        <EditText
            android:id="@+id/et_UserNmae"
            android:layout_width="302dp"
            android:layout_height="47dp"
            android:layout_below="@+id/view1"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="34dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@mipmap/login_work_bg"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:hint="@string/LoginActivity_employeeNum"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/common_textSize_default14"/>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_below="@+id/et_UserNmae"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="34dp"
            android:background="@android:color/white"/>

        <EditText
            android:id="@+id/et_Password"
            android:layout_width="302dp"
            android:layout_height="47dp"
            android:layout_below="@+id/view2"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="34dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@mipmap/login_psd_bg"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:hint="@string/LoginActivity_psd"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/common_textSize_default14"/>

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_below="@+id/et_Password"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="34dp"
            android:background="@android:color/white"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="302dp"
            android:layout_height="47dp"
            android:layout_below="@+id/view3"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="34dp"
            android:layout_marginTop="54dp"
            android:background="@drawable/edittext_common_bg"
            android:text="@string/btn_Login"
            android:textColor="@color/btn_login_text_color"
            android:textSize="@dimen/common_textSize_default18"/>
    </RelativeLayout>


</RelativeLayout>
