<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <ListView
        android:id="@+id/listView"
        android:layout_width="356dp"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/layout_topbar"
        android:background="@drawable/list_style"/>

    <RelativeLayout
        android:id="@+id/layout_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toRightOf="@+id/listView"
        android:background="@android:color/white">

        <LinearLayout
            android:id="@+id/layout_img"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/msg_regist_img"
                android:textSize="@dimen/common_textSize_default20"/>

            <com.yvision.widget.CircleImageView
                android:id="@+id/photo_default"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="20dp"
                android:background="@mipmap/default_photo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/msg_cap_img"
                android:textSize="@dimen/common_textSize_default20"/>

            <com.yvision.widget.CircleImageView
                android:id="@+id/photo_cap"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:background="@mipmap/default_photo"/>

        </LinearLayout>


        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_below="@+id/layout_img"
            android:layout_marginTop="60dp"
            android:background="@color/cl_text_common">
        </View>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/layout_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        android:id="@+id/tv_name1"
                        android:layout_width="200dp"
                        android:layout_height="49dp"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical"
                        android:paddingLeft="25dp"
                        android:text="@string/msg_name"
                        android:textColor="@color/cl_text_common"
                        android:textSize="@dimen/common_textSize_default16"/>

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/tv_name1"
                        android:gravity="center_vertical"
                        android:textColor="@color/cl_text_common"
                        android:textSize="@dimen/common_textSize_default16"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dip"
                        android:layout_alignParentBottom="true"
                        android:layout_below="@+id/tv_name1"
                        android:background="@color/cl_text_common">
                    </View>
                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/layout_id"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        android:id="@+id/tv_id1"
                        android:layout_width="200dp"
                        android:layout_height="49dp"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical"
                        android:paddingLeft="25dp"
                        android:text="@string/msg_id"
                        android:textColor="@color/cl_text_common"
                        android:textSize="@dimen/common_textSize_default16"/>

                    <TextView
                        android:id="@+id/tv_id"
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/tv_id1"
                        android:gravity="center_vertical"
                        android:textColor="@color/cl_text_common"
                        android:textSize="@dimen/common_textSize_default16"/>

                    <View
                        android:id="@+id/view4"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_alignParentBottom="true"
                        android:layout_below="@+id/tv_id1"
                        android:background="@color/cl_text_common">
                    </View>
                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/layout_company"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        android:id="@+id/tv_company1"
                        android:layout_width="200dp"
                        android:layout_height="49dp"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical"
                        android:paddingLeft="25dp"
                        android:text="@string/msg_company"
                        android:textColor="@color/cl_text_common"
                        android:textSize="@dimen/common_textSize_default16"/>

                    <TextView
                        android:id="@+id/tv_company"
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/tv_company1"
                        android:gravity="center_vertical"
                        android:textColor="@color/cl_text_common"
                        android:textSize="@dimen/common_textSize_default16"
                        />

                    <View
                        android:id="@+id/view5"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_alignParentBottom="true"
                        android:layout_below="@+id/tv_company1"
                        android:background="@color/cl_text_common">
                    </View>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layout_captime"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    >

                    <TextView
                        android:id="@+id/tv_captime1"
                        android:layout_width="200dp"
                        android:layout_height="49dp"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical"
                        android:paddingLeft="25dp"
                        android:text="@string/msg_captime"
                        android:textColor="@color/cl_text_common"
                        android:textSize="@dimen/common_textSize_default16"/>

                    <TextView
                        android:id="@+id/tv_captime"
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/tv_captime1"
                        android:gravity="center_vertical"
                        android:textColor="@color/cl_text_common"
                        android:textSize="@dimen/common_textSize_default16"/>

                    <View
                        android:id="@+id/view6"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_alignParentBottom="true"
                        android:layout_below="@+id/tv_captime1"
                        android:background="@color/cl_text_common">
                    </View>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layout_score"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    >

                    <TextView
                        android:id="@+id/tv_score1"
                        android:layout_width="200dp"
                        android:layout_height="49dp"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical"
                        android:paddingLeft="25dp"
                        android:text="@string/msg_score"
                        android:textColor="@color/cl_text_common"
                        android:textSize="@dimen/common_textSize_default16"
                        />

                    <TextView
                        android:id="@+id/tv_score"
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/tv_score1"
                        android:gravity="center_vertical"
                        android:textColor="@color/cl_text_common"
                        android:textSize="@dimen/common_textSize_default16"/>

                    <View
                        android:id="@+id/view7"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_alignParentBottom="true"
                        android:layout_below="@+id/tv_score1"
                        android:background="@color/cl_text_common">
                    </View>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layout_dept"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    >

                    <TextView
                        android:id="@+id/tv_dept1"
                        android:layout_width="200dp"
                        android:layout_height="49dp"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical"
                        android:paddingLeft="25dp"
                        android:text="@string/msg_dept"
                        android:textColor="@color/cl_text_common"
                        android:textSize="@dimen/common_textSize_default16"/>

                    <TextView
                        android:id="@+id/tv_dept"
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/tv_dept1"
                        android:gravity="center_vertical"
                        android:textColor="@color/cl_text_common"
                        android:textSize="@dimen/common_textSize_default16"/>

                    <View
                        android:id="@+id/viewdept"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_alignParentBottom="true"
                        android:layout_below="@+id/tv_dept1"
                        android:background="@color/cl_text_common">
                    </View>
                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/layout_address"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    >

                    <TextView
                        android:id="@+id/tv_address1"
                        android:layout_width="200dp"
                        android:layout_height="49dp"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical"
                        android:paddingLeft="25dp"
                        android:text="@string/msg_address"
                        android:textColor="@color/cl_text_common"
                        android:textSize="@dimen/common_textSize_default16"/>

                    <TextView
                        android:id="@+id/tv_address"
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/tv_address1"
                        android:gravity="center_vertical"
                        android:textColor="@color/cl_text_common"
                        android:textSize="@dimen/common_textSize_default16"/>

                    <View
                        android:id="@+id/viewaddress"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_alignParentBottom="true"
                        android:layout_below="@+id/tv_address1"
                        android:background="@color/cl_text_common">
                    </View>
                </RelativeLayout>

            </LinearLayout>
        </ScrollView>


    </RelativeLayout>
</RelativeLayout>